Resources/Public/Scss/Theme/_megamenu.scss
.navbar-item.is-mega {
  position: static;

  .is-mega-menu-title {
    margin-bottom: 0;
    padding: .375rem 1rem;
  }
}

@include from($navbar-breakpoint) {
  .navbar-item.is-mega {
    display: block;
    & > .navbar-link{
      min-height: $navbar-height;
    }

    .navbar-dropdown {
      right: 0;
      top: initial;

      padding-bottom: 1rem;
      padding-top: 1rem;

      .navbar-item {
        white-space: normal;
      }
    }

    .column {
      & > a{
        font-weight: $weight-semibold;
      }
      ul {
        margin-left: 1rem;
        border-left: 1px solid $primary;
      }
    }
  }
}

@include until($navbar-breakpoint) {
  .navbar-dropdown {
    .container {
      padding: 0;
    }

    .columns {
      margin: 0;
    }

    .column {
      padding: 0;

      ul {
        margin-left: 1.5rem;
        border-left: 1px solid $primary;
      }
    }
  }
}

